--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .frequencyRange {
-	width: 300%;
+	width: 100%;
 	background-color: #00AA00;
 	
 }
@@ -8,4 +8,8 @@ html, body {
       width: 100%;
       height: 100%;
       overflow:hidden; // to avoid scrollbars
+}
+
+table.table {
+
 }
